# client-uni-care-at-home-inc

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: env.example  ringcentral.json
docs/: call-flow.md  deployment-checklist.md  fax-architecture.md  hipaa-compliance.md
scripts/: check_system.py  send_test_fax.py  setup_webhooks.py
src/: __init__.py
src/compliance/: audit.py
src/core/: client.py
src/fax/: receiver.py  sender.py
src/ivr/: manager.py
src/provisioning/: phones.py
src/webhooks/: server.py  subscriptions.py
tests/: test_audit.py  test_fax_sender.py  test_webhook_server.py
